--- a/src/main/res/layout/activity_headline_description.xml
+++ b/src/main/res/layout/activity_headline_description.xml
@@ -42,6 +42,50 @@
         android:layout_below="@id/appbar"
         android:background="@drawable/dropshadow" />
 
+    <ScrollView
+        android:layout_below="@id/shadow_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:scaleType="centerCrop"
+                android:id="@+id/banner"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"/>
+            <TextView
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/colorPrimaryDark"
+                android:id="@+id/desc"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/banner"/>
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+
+
+<!--    <WebView-->
+<!--        android:layout_below="@id/shadow_view"-->
+<!--        android:id="@+id/webview"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"/>-->
+
+
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:layout_marginTop="15dp"-->
+<!--        android:layout_below="@id/appbar"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        android:id="@+id/recycler"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"/>-->
 
 </RelativeLayout>
