--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
-            android:text="Headlines"
+            android:text="Businesss Headlines-India"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp" />
